<resources>
    <string name="app_name">Komma</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_purchases_button">Log Purchase</string>
    <string name="log_sales_button">Log Sale</string>
    <string name="view_analytics_button">View Analytics</string>
    <string name="date">Date:</string>
    <string name="home">Home</string>
    <string name="submit_button">Submit</string>
    <string name="popular">popular</string>
    <string name="home_text">Home</string>
    <string name="popular_text">Popular</string>
    <string name="logout">Logout</string>
    <string name="saved_activity">Saved Activity</string>
    <string-array name="tag_options">
        <item>Davis Computer Science Club</item>
        <item>History Club</item>
        <item>Philosophy Club</item>
        <item>Entrepreneurship Club</item>
        <item>Women in Computer Science</item>
    </string-array>
</resources>
