<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_layout"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="275dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/testlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/edittext_background"
        android:ems="20"
        android:fontFamily="@font/montserrat"
        android:drawableStart="@drawable/envelope"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxEms="20"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_image" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/montserrat"
        android:drawableStart="@drawable/lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:ems="20"
        android:maxEms="20"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/button_background"
        android:height="45dp"
        android:width="240dp"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat"
        android:text="@string/register_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <TextView
        android:id="@+id/already_have_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13dp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>